--- a/sentinel-dashboard-nacos/src/main/resources/application.properties
+++ b/sentinel-dashboard-nacos/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.http.encoding.enabled=true
 
 #cookie name setting
 server.servlet.session.cookie.name=sentinel_dashboard_cookie
-
+server.port=9080
 #logging settings
 logging.level.org.springframework.web=INFO
 logging.file=${user.home}/logs/csp/sentinel-dashboard.log
@@ -16,9 +16,12 @@ logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %
 auth.filter.exclude-urls=/,/auth/login,/auth/logout,/registry/machine,/version
 auth.filter.exclude-url-suffixes=htm,html,js,css,map,ico,ttf,woff,png
 # If auth.enabled=false, Sentinel console disable login
-auth.username=sentinel
-auth.password=sentinel
+auth.username=taoguba
+auth.password=tgb123_321
 
 # Inject the dashboard version. It's required to enable
 # filtering in pom.xml for this resource file.
 sentinel.dashboard.version=${project.version}
+
+nacos.serverAddr=120.92.111.118:8848
+nacos.namespace=5e3dbf06-f72e-4875-838f-e702735857bf
