--- a/sentinel-dashboard-nacos/pom.xml
+++ b/sentinel-dashboard-nacos/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
-<!--            <scope>test</scope>-->
+            <version>1.8.0</version>
         </dependency>
         <!-- for Apollo rule publisher sample -->
         <dependency>
